# HereComesTheCheese

./: .gitignore  README.md  background.js  boa_input_button.html  buildcmd.txt  ergo.py  manifest.json  popup.html  popup.js  yahoo_input1.html  yahoo_input2.html
app/: CMakeLists.txt  Makefile  com.example.ergoapp.list  ergo_app.cpp  type_by_paste.h  type_by_paste.mm  wave.h
app/include/: ExecutionEngine.h  HIDDevice.h  HIDManager.h  InputHandler.h  Logger.h  OpenAIClient.h  ProxySocketServer.h  Utils.h  WhisperClient.h  ZoomScheduler.h  prompt.h
app/scripts/: create_zoom_meeting.py  get_email_address.scpt  get_phone_from_contacts.scpt  launch_browser.scpt
app/src/: ExecutionEngine.cpp  HIDDevice.cpp  HIDManager.cpp  InputHandler.cpp  Logger.cpp  OpenAIClient.cpp  ProxySocketServer.cpp  Utils.cpp  WhisperClient.cpp  ZoomScheduler.cpp  main.cpp  type_by_paste.mm  wave.c
app/test/: ExecutionEngineTest.cpp  HIDDeviceTest.cpp  tester.py
ascii_art/: mouse_blink.sh
chrome-extension/: README.md  background.js  cmd_click.js  cmd_credential.js  com.ergo.echo.json  contentScript.js  dictionary.js  ergo_native.json  get_links.js  grab_news.js  manifest.json  popup.css  popup.html  popup.js  scrape_news.js  side_panel.html  side_panel.js  youtube.js
test/: Makefile  concurrent.cpp  ergo_app.cpp  ergo_proxy.cpp  gpt_shell.py  langchain_shell_app.py  mac_report.c  mac_report.cpp  smartthings.py  socket_test.cpp  socket_test.py  test3.c
test/NumberLinks/: background.js  content.js
test/keystroke/: keystroke.cpp  keystroke1.cpp  type_by_keystroke.cpp  type_by_paste.mm
test/openai/: Makefile  openai_test.cpp
test/os_script/: Makefile  compose_email.scpt  create_event.scpt  create_reminder.scpt  get_email_from_contacts.scpt  test_compose_email.cpp  test_create_event.cpp  test_create_reminder.cpp  test_get_email.cpp  test_get_phone.cpp
test/recording/: compress.py  record_lc3_to_file.py  record_pcm_to_wav.py  recording.py
test/same_chrome_tab/: chrome-opener.sh
test/whisper/: Makefile  whisper_client.cpp
test/zoom/: Makefile  zoom_scheduler.cpp
